--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources/shaders</directory>
+                <includes>
+                    <include>*.fs</include>
+                    <include>*.</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
     <properties>
