--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
         <joml.version>1.9.12</joml.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <profiles>
         <profile>
             <id>lwjgl-natives-linux</id>
@@ -225,6 +232,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.6</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Vatuu</groupId>
+            <artifactId>discord-rpc</artifactId>
+            <version>1.6.2</version>
         </dependency>
     </dependencies>
 
