- Entity rendering - Uniform Variables System - Vertex Shader Entity
Next:
- Scene will be the next thing

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
                 <directory>src/main/resources/shaders</directory>
                 <includes>
                     <include>*.fs</include>
-                    <include>*.</include>
+                    <include>*.*</include>
                 </includes>
             </resource>
         </resources>
